--- a/showmeyourbackground/showmeyourbackground.csproj
+++ b/showmeyourbackground/showmeyourbackground.csproj
@@ -10,6 +10,8 @@
     <AssemblyName>showmeyourbackground</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <ApplicationIcon>bin\Debug\data\张栩锐icon.ico</ApplicationIcon>
+    <NoWin32Manifest>False</NoWin32Manifest>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -50,6 +52,30 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="egg.cs" />
+    <Compile Include="egg.Designer.cs">
+      <DependentUpon>egg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="egg1.2.cs" />
+    <Compile Include="egg1.2.Designer.cs">
+      <DependentUpon>egg1.2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="egg1.cs" />
+    <Compile Include="egg1.Designer.cs">
+      <DependentUpon>egg1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="egg2.cs" />
+    <Compile Include="egg2.Designer.cs">
+      <DependentUpon>egg2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="egg3.cs" />
+    <Compile Include="egg3.Designer.cs">
+      <DependentUpon>egg3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="egg4.cs" />
+    <Compile Include="egg4.Designer.cs">
+      <DependentUpon>egg4.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs" />
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -61,6 +87,24 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="egg.resx">
+      <DependentUpon>egg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="egg1.2.resx">
+      <DependentUpon>egg1.2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="egg1.resx">
+      <DependentUpon>egg1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="egg2.resx">
+      <DependentUpon>egg2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="egg3.resx">
+      <DependentUpon>egg3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="egg4.resx">
+      <DependentUpon>egg4.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
