--- a/showmeyourbackground/showmeyourbackground.csproj
+++ b/showmeyourbackground/showmeyourbackground.csproj
@@ -11,7 +11,6 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <ApplicationIcon>bin\Debug\data\icon.ico</ApplicationIcon>
-    <NoWin32Manifest>False</NoWin32Manifest>
     <SignAssembly>False</SignAssembly>
     <DelaySign>False</DelaySign>
     <AssemblyOriginatorKeyMode>File</AssemblyOriginatorKeyMode>
@@ -23,6 +22,21 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>False</RunCodeAnalysis>
     <SourceAnalysisOverrideSettingsFile>D:\project C#\showmeyourbackground\showmeyourbackground\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -50,6 +64,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>showmeyourbackground.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -70,35 +87,51 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="egg.cs" />
+    <Compile Include="egg.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="egg.Designer.cs">
       <DependentUpon>egg.cs</DependentUpon>
     </Compile>
-    <Compile Include="egg1.2.cs" />
+    <Compile Include="egg1.2.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="egg1.2.Designer.cs">
       <DependentUpon>egg1.2.cs</DependentUpon>
     </Compile>
-    <Compile Include="egg1.cs" />
+    <Compile Include="egg1.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="egg1.Designer.cs">
       <DependentUpon>egg1.cs</DependentUpon>
     </Compile>
-    <Compile Include="egg2.cs" />
+    <Compile Include="egg2.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="egg2.Designer.cs">
       <DependentUpon>egg2.cs</DependentUpon>
     </Compile>
-    <Compile Include="egg3.cs" />
+    <Compile Include="egg3.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="egg3.Designer.cs">
       <DependentUpon>egg3.cs</DependentUpon>
     </Compile>
-    <Compile Include="egg4.cs" />
+    <Compile Include="egg4.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="egg4.Designer.cs">
       <DependentUpon>egg4.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="NoPic.cs" />
+    <Compile Include="NoPic.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="NoPic.Designer.cs">
       <DependentUpon>NoPic.cs</DependentUpon>
     </Compile>
@@ -133,6 +166,13 @@
     <EmbeddedResource Include="NoPic.resx">
       <DependentUpon>NoPic.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
